[add] pari e dispari exercise

--- a/pari-dispari/index.html
+++ b/pari-dispari/index.html
@@ -7,6 +7,13 @@
   <title>Pari e Dispari</title>
 </head>
 <body>
+  <h2 id="pari-dispari">Hai scelto: </h2>
+  <h2 id="scelta-utente">Il numero dell'utente è: </h2>
+  <h2 id="scelta-pc">Il numero del computer è: </h2>
+  <h2 id="somma">La somma è: </h2>
+  <br>
+  <br>
+  <h1 id="risultato"></h1>
   <script src="script.js"></script>
 </body>
 </html>
